--- a/index.html
+++ b/index.html
@@ -81,11 +81,17 @@
                   <div class="about-me__info info">
                     <div class="info__item">
                       <span class="info__label">Phone</span>
-                      <span class="info__text">+7-910-424-52-87</span>
+                      <span class="info__text"
+                        ><a href="tel:+79104245287">+7(910) 424-52-87</a>
+                      </span>
                     </div>
                     <div class="info__item">
                       <span class="info__label">Email</span>
-                      <span class="info__text">ilin_bulat@mail.com</span>
+                      <span class="info__text"
+                        ><a href="mailto:ilin_bulat@mail.ru" target="_blank"
+                          >ilin_bulat@mail.ru</a
+                        ></span
+                      >
                     </div>
                     <div class="info__item">
                       <span class="info__label">Address</span>
@@ -94,9 +100,22 @@
                     <div class="info__item">
                       <span class="info__label">Social</span>
                       <span class="info__text social">
-                        <a href="" class="social__item _icon-instagram"></a>
-                        <a href="" class="social__item _icon-github"></a>
-                        <a href="" class="social__item _icon-telegram"></a>
+                        <a
+                          href="https://vk.com/ilin_bulat"
+                          target="_blank"
+                          class="social__item _icon-vk"
+                        ></a>
+
+                        <a
+                          href="https://github.com/EmissarKir"
+                          target="_blank"
+                          class="social__item _icon-github"
+                        ></a>
+                        <a
+                          href="https://telegram.me/EmissarKir"
+                          class="social__item _icon-telegram"
+                          target="_blank"
+                        ></a>
                       </span>
                     </div>
                   </div>
@@ -128,7 +147,7 @@
             <div class="skills__items">
               <div class="skills__item">
                 <div class="skills__icon">
-                  <img src="../img/icons/icons.svg#javascript" />
+                  <img src="./img/icons/javascript.svg" />
                 </div>
                 <h2 class="skills__title">JavaScript</h2>
 
@@ -148,7 +167,7 @@
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
-                  <img src="../img/icons/icons.svg#html" />
+                  <img src="./img/icons/html.svg" />
                 </div>
                 <h2 class="skills__title">HTML 5</h2>
 
@@ -168,7 +187,7 @@
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
-                  <img src="../img/icons/icons.svg#css" />
+                  <img src="./img/icons/css.svg" />
                 </div>
                 <h2 class="skills__title">CSS 3</h2>
 
@@ -188,7 +207,7 @@
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
-                  <img src="../img/icons/icons.svg#react" />
+                  <img src="./img/icons/react.svg" />
                 </div>
                 <h2 class="skills__title">React</h2>
 
@@ -208,7 +227,7 @@
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
-                  <img src="../img/icons/icons.svg#nodejs" />
+                  <img src="./img/icons/nodejs.svg" />
                 </div>
                 <h2 class="skills__title">Node JS</h2>
 
@@ -226,7 +245,7 @@
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
-                  <img src="../img/icons/icons.svg#git" />
+                  <img src="./img/icons/git.svg" />
                 </div>
                 <h2 class="skills__title">GIT</h2>
 
@@ -246,7 +265,7 @@
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
-                  <img src="../img/icons/icons.svg#docker" />
+                  <img src="./img/icons/docker.svg" />
                 </div>
                 <h2 class="skills__title">Docker</h2>
 
@@ -271,12 +290,14 @@
               <div class="gallery-works__column">
                 <div class="gallery-works__item">
                   <div class="gallery-works__body">
-                    <div class="gallery-works__title">
+                    <div
+                      class="gallery-works__title gallery-works__title_white"
+                    >
                       My paints - интернет-магазин
                     </div>
                   </div>
                   <div class="gallery-works__image">
-                    <img src="img/slider/1.jpg" alt="" />
+                    <img src="img/slider/mypaints.jpg" alt="" />
                   </div>
                   <div class="gallery-works__actions action-gallery">
                     <div class="action-gallery__body">
@@ -284,9 +305,14 @@
                         Интернет- магазин красок
                       </h5>
                       <div class="action-gallery__links">
-                        <a href="" class="action-gallery__link _icon-link"></a>
                         <a
-                          href=""
+                          href="http://82.148.31.218/"
+                          target="_blank"
+                          class="action-gallery__link _icon-link"
+                        ></a>
+                        <a
+                          href="https://github.com/EmissarKir/fullstack-online-shop"
+                          target="_blank"
                           class="action-gallery__link _icon-github"
                         ></a>
                       </div>
@@ -352,7 +378,9 @@
           </section>
           <section class="create-message">
             <div class="create-message__header">
-              <div class="create-message__title title">Контакты</div>
+              <h3 class="create-message__title title title_section">
+                Контакты
+              </h3>
               <div class="create-message__text">
                 Вы работаете над чем-то большим? Я хотел бы помочь, чтобы это
                 произошло! Напишите мне письмо и начните свой проект прямо
