fixed big svg-files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220416014015" />
 
   <link
     rel="apple-touch-icon"
@@ -136,7 +136,7 @@
                 </div>
               </div>
               <div class="about-me__image">
-                <img src="img/main-image.jpg" alt="main " />
+                <picture><source srcset="img/main-image.webp" type="image/webp"><img src="img/main-image.jpg" alt="main " /></picture>
               </div>
             </div>
           </section>
@@ -297,7 +297,7 @@
                     </div>
                   </div>
                   <div class="gallery-works__image">
-                    <img src="img/slider/mypaints.jpg" alt="" />
+                    <picture><source srcset="img/slider/mypaints.webp" type="image/webp"><img src="img/slider/mypaints.jpg" alt="" /></picture>
                   </div>
                   <div class="gallery-works__actions action-gallery">
                     <div class="action-gallery__body">
@@ -326,7 +326,7 @@
                     <div class="gallery-works__title">MemoryX</div>
                   </div>
                   <div class="gallery-works__image">
-                    <img src="img/slider/memoryx.jpg" alt="" />
+                    <picture><source srcset="img/slider/memoryx.webp" type="image/webp"><img src="img/slider/memoryx.jpg" alt="" /></picture>
                   </div>
                   <div class="gallery-works__actions action-gallery">
                     <div class="action-gallery__body">
@@ -356,7 +356,7 @@
                   </div>
 
                   <div class="gallery-works__image">
-                    <img src="img/slider/mirkrasokapp5.jpg" alt="" />
+                    <picture><source srcset="img/slider/mirkrasokapp5.webp" type="image/webp"><img src="img/slider/mirkrasokapp5.jpg" alt="" /></picture>
                   </div>
                   <div class="gallery-works__actions action-gallery">
                     <div class="action-gallery__body">
@@ -507,6 +507,6 @@
       </div>
     </div>
 
-    <script src="js/app.min.js"></script>
+    <script src="js/app.min.js?_v=20220416014015"></script>
   </body>
 </html>
