--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220416014015" />
 
   <link
     rel="apple-touch-icon"
