fixed about-info block

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20220416014015" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220416172737" />
 
   <link
     rel="apple-touch-icon"
@@ -71,10 +71,11 @@
                 <h1 class="about-me__title title">Я - Ильин Булат</h1>
                 <div class="about-me__text">
                   <p>
-                    Я Frontend-разработчик (React) из Москвы. I currently work
-                    as a part time Remote Junior Web Developer for Coolor,
-                    located in Las Vegas. I am looking to take on more work and
-                    to increase my skills as a Web Developer.
+                    Frontend-разработчик (React) из Москвы. Мне нравится
+                    создавать и получать удовольствие от готового результата,
+                    получать новые знания, облегчать рутинные задачи с помощью
+                    кода. Свободное время посвящаю чтению профильной литературы
+                    и статей, прогулкам с семьей
                   </p>
                 </div>
                 <div class="about-me__content">
@@ -507,6 +508,6 @@
       </div>
     </div>
 
-    <script src="js/app.min.js?_v=20220416014015"></script>
+    <script src="js/app.min.js?_v=20220416172737"></script>
   </body>
 </html>
