added link to resume

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20220416172737" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220416183956" />
 
   <link
     rel="apple-touch-icon"
@@ -32,7 +32,7 @@
   <body>
     <header class="header lock-padding">
   <div class="header__container __container">
-    <a href="" class="header__logo">Logo</a>
+    <a href="#" class="header__logo">Logo </a>
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
