--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20220416172737" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220416183956" />
 
   <link
     rel="apple-touch-icon"
@@ -33,7 +33,7 @@
     <div class="wrapper">
       <header class="header lock-padding">
   <div class="header__container __container">
-    <a href="" class="header__logo">Logo</a>
+    <a href="#" class="header__logo">Logo </a>
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
@@ -129,7 +129,7 @@
                     </a>
                     <a
                       class="about-me__button button"
-                      href="https://drive.google.com/file/d/1R0oWFO6yaO9ltWywhwcTzQpMO4tbC99l/view?usp=sharing"
+                      href="https://drive.google.com/file/d/18xNsWUrEUcknJC82TsVvZyCJFvcFAlr4/view?usp=sharing"
                       target="_blank"
                       >Мое резюме</a
                     >
@@ -475,6 +475,7 @@
               <div class="form__rigthside">
                 <textarea
                   name="message"
+                  required
                   rows="6"
                   placeholder="Сообщение"
                   class="form__message"
@@ -503,11 +504,11 @@
     <div id="message-success" class="popup">
       <div class="popup__body">
         <div class="popup__content popup__content_message-success">
-          Сообщение успшено отправлено!!!
+          Сообщение успешно отправлено!!!
         </div>
       </div>
     </div>
 
-    <script src="js/app.min.js?_v=20220416172737"></script>
+    <script src="js/app.min.js?_v=20220416183956"></script>
   </body>
 </html>
