--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20220416183956" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220425141712" />
 
   <link
     rel="apple-touch-icon"
@@ -72,10 +72,10 @@
                 <div class="about-me__text">
                   <p>
                     Frontend-разработчик (React) из Москвы. Мне нравится
-                    создавать и получать удовольствие от готового результата,
+                    создавать, получать удовольствие от результата. Люблю
                     получать новые знания, облегчать рутинные задачи с помощью
                     кода. Свободное время посвящаю чтению профильной литературы
-                    и статей, прогулкам с семьей
+                    и статей.
                   </p>
                 </div>
                 <div class="about-me__content">
@@ -151,134 +151,48 @@
                   <img src="./img/icons/javascript.svg" />
                 </div>
                 <h2 class="skills__title">JavaScript</h2>
-
-                <div class="skills__raiting raiting">
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                </div>
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
                   <img src="./img/icons/html.svg" />
                 </div>
                 <h2 class="skills__title">HTML 5</h2>
-
-                <div class="skills__raiting raiting">
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                </div>
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
                   <img src="./img/icons/css.svg" />
                 </div>
                 <h2 class="skills__title">CSS 3</h2>
-
-                <div class="skills__raiting raiting">
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                </div>
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
                   <img src="./img/icons/react.svg" />
                 </div>
                 <h2 class="skills__title">React</h2>
-
-                <div class="skills__raiting raiting">
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
+              </div>
+              <div class="skills__item">
+                <div class="skills__icon">
+                  <img src="./img/icons/redux.svg" />
                 </div>
+                <h2 class="skills__title">Redux</h2>
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
                   <img src="./img/icons/nodejs.svg" />
                 </div>
                 <h2 class="skills__title">Node JS</h2>
-
-                <div class="skills__raiting raiting">
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                </div>
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
                   <img src="./img/icons/git.svg" />
                 </div>
                 <h2 class="skills__title">GIT</h2>
-
-                <div class="skills__raiting raiting">
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                </div>
               </div>
               <div class="skills__item">
                 <div class="skills__icon">
                   <img src="./img/icons/docker.svg" />
                 </div>
                 <h2 class="skills__title">Docker</h2>
-
-                <div class="skills__raiting raiting">
-                  <div
-                    class="raiting__item raiting__item_checked _icon-star"
-                  ></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                  <div class="raiting__item _icon-star"></div>
-                </div>
               </div>
             </div>
           </section>
@@ -383,9 +297,8 @@
                 Контакты
               </h3>
               <div class="create-message__text">
-                Вы работаете над чем-то большим? Я хотел бы помочь, чтобы это
-                произошло! Напишите мне письмо и начните свой проект прямо
-                сейчас! Just do it!
+                Вы работаете над чем-то большим? Я хочу помочь, напишите мне
+                письмо и начните свой проект прямо сейчас!
               </div>
             </div>
 
@@ -444,9 +357,8 @@
             <div class="create-message__header">
               <div class="create-message__title title">Контакты</div>
               <div class="create-message__text">
-                Вы работаете над чем-то большим? Я хотел бы помочь, чтобы это
-                произошло! Напишите мне письмо и начните свой проект прямо
-                сейчас! Just do it!
+                Вы работаете над чем-то большим? Я хочу помочь, напишите мне
+                письмо и начните свой проект прямо сейчас!
               </div>
             </div>
 
@@ -509,6 +421,6 @@
       </div>
     </div>
 
-    <script src="js/app.min.js?_v=20220416183956"></script>
+    <script src="js/app.min.js?_v=20220425141712"></script>
   </body>
 </html>
