add skills typeScript and styled-components

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20220425141712" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220516233136" />
 
   <link
     rel="apple-touch-icon"
@@ -193,6 +193,24 @@
                   <img src="./img/icons/docker.svg" />
                 </div>
                 <h2 class="skills__title">Docker</h2>
+              </div>
+              <div class="skills__item">
+                <div class="skills__icon">
+                  <img src="./img/icons/typescript.svg" />
+                </div>
+                <h2 class="skills__title">TypeScript</h2>
+              </div>
+              <div class="skills__item">
+                <div class="skills__icon">
+                  <img src="./img/icons/styled-components.svg" />
+                </div>
+                <h2 class="skills__title">styled components</h2>
+              </div>
+              <div class="skills__item">
+                <div class="skills__icon">
+                  <img src="./img/icons/mongodb.svg" />
+                </div>
+                <h2 class="skills__title">MongoDB</h2>
               </div>
             </div>
           </section>
@@ -421,6 +439,6 @@
       </div>
     </div>
 
-    <script src="js/app.min.js?_v=20220425141712"></script>
+    <script src="js/app.min.js?_v=20220516233136"></script>
   </body>
 </html>
