--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="stylesheet" href="css/style.min.css?_v=20220516233136" />
+  <link rel="stylesheet" href="css/style.min.css?_v=20220630150903" />
 
   <link
     rel="apple-touch-icon"
@@ -223,6 +223,37 @@
               <div class="gallery-works__column">
                 <div class="gallery-works__item">
                   <div class="gallery-works__body">
+                    <div class="gallery-works__title">
+                      MemoryX-2 - приложение для обучения по карточкам
+                    </div>
+                  </div>
+                  <div class="gallery-works__image">
+                    <picture><source srcset="img/slider/memoryx-2.webp" type="image/webp"><img src="img/slider/memoryx-2.png" alt="memoryx-2" /></picture>
+                  </div>
+                  <div class="gallery-works__actions action-gallery">
+                    <div class="action-gallery__body">
+                      <h5 class="action-gallery__title">
+                        Приложение для обучения (TypeScript&Styled Components)
+                      </h5>
+                      <div class="action-gallery__links">
+                        <a
+                          href="https://fir-memoryx-2.firebaseapp.com/"
+                          target="_blank"
+                          class="action-gallery__link _icon-link"
+                        ></a>
+                        <a
+                          href="https://github.com/EmissarKir/memoryX-2"
+                          target="_blank"
+                          class="action-gallery__link _icon-github"
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="gallery-works__column">
+                <div class="gallery-works__item">
+                  <div class="gallery-works__body">
                     <div
                       class="gallery-works__title gallery-works__title_white"
                     >
@@ -238,11 +269,11 @@
                         Интернет- магазин красок
                       </h5>
                       <div class="action-gallery__links">
-                        <a
+                        <!-- <a
                           href="http://82.148.31.218/"
                           target="_blank"
                           class="action-gallery__link _icon-link"
-                        ></a>
+                        ></a> -->
                         <a
                           href="https://github.com/EmissarKir/fullstack-online-shop"
                           target="_blank"
@@ -439,6 +470,6 @@
       </div>
     </div>
 
-    <script src="js/app.min.js?_v=20220516233136"></script>
+    <script src="js/app.min.js?_v=20220630150903"></script>
   </body>
 </html>
